--- a/mod-2/index.html
+++ b/mod-2/index.html
@@ -1,13 +1,31 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>coursera</title>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA=Compatible"content="IE-edge">
+	<meta name="viewport"content="width=device-width,initial-scale=1.0">
+	<link rel="stylesheet" href="style.css">
+	<title>site</title>
 </head>
 <body>
-<h1>COOOOOOOOOOOOOOOL</h1>
-<div><p>What are the routes of Vande Bharat Express?
-Since the beginning of 2023, Vande Bharat trains have been launched on eleven routes – Secunderabad-Visakhapatnam, Mumbai-Solapur, Mumbai-Shirdi, Delhi-Bhopal, Secunderabad-Tirupati, Chennai-Coimbatore, Ajmer-Delhi Cantt, Thiruvananthapuram-Kasargod, Puri-Howrah, Dehradun- Delhi's Anand Vihar Terminus and Ne</p></div>
+	<h1>Our Menu</h1>
+	<div id="ensemble">
+		<section class="z">
+			<div class="a">chicken</div>
+			<p class="description">posez des questions dans les discussions si vous etes bloque Nous apprenons touset passer par le fait detre bloque puis debloque meme avec laide de q
+				uelqu unpeut etre une experience dapprentissage tres precieuse</p>
+		</section>
+			<section class="z">
+				<div class="b">Beef</div>
+				<p class="description">posez des questions dans les discussions si vous etes bloque Nous apprenons touset passer par le fait detre bloque puis debloque meme avec laide de q
+				uelqu unpeut etre une experience dapprentissage tres precieuse</p>
+			</section>
+			<section class="z">
+				<div class="c">Sushi</div>
+				<p class="description">posez des questions dans les discussions si vous etes bloque Nous apprenons touset passer par le fait detre bloque puis debloque meme avec laide de q
+				uelqu unpeut etre une experience dapprentissage tres precieuse</p>
+			</section>
+	</div>
 </body>
 </html>
+
